chore: Preload web fonts to prevent font flickering

--- a/frontend-web-vue/src/assets/style/index.css
+++ b/frontend-web-vue/src/assets/style/index.css
@@ -1,11 +1,12 @@
 @import url('@/assets/style/transitions.css');
 @import url('@/assets/style/themes.css');
+@import url('@/assets/style/fonts.css');
 @import 'tailwindcss' source('../../../src/');
 
 @theme {
   --container-4md: 112rem; /* 4x OfferBox mit max-w-md (siehe OfferBoxGroup) */
 
-  --font-sans: Inter Variable, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  --font-sans: Inter Variable, Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   --font-display: Chewy, ui-serif, Georgia, Cambria, Times New Roman, Times, serif;
 
   --color-*: initial; /* FIXME: TailwindCSS erhält alle unnützen Variablen -> https://github.com/tailwindlabs/tailwindcss/issues/15714 */
